[project]
name = ""
version = ""
description = ""
authors = [
    {name = "sovlookup", email = "gonorth@qq.com"},
]
dependencies = [
    "paddlespeech>=1.4.1",
    "paddlepaddle>=2.4.2",
    "opencv-python>=4.7.0.72",
    "setuptools>=67.8.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]

[tool.pdm.scripts]
start = "python src/main.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"