[project]
name = ""
version = ""
description = ""
authors = [
    {name = "sovlookup", email = "gonorth@qq.com"},
]
dependencies = [
    "paddlespeech",
    "paddlepaddle",
    "opencv-python",
    "setuptools",
]
requires-python = "==3.8"
license = {text = "MIT"}

[tool.pdm]

[tool.pdm.scripts]
start = "python src/main.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"